# thotsbay-bot

./: .gitattributes  .gitignore  .gitlab-ci.yml  README.md  gitlab-ci.yml  logger.py  main.py  pyproject.toml  requirements.txt  run_colab.sh
.github/workflows/: Run.yml  codeql-analysis.yml  gitlab_mirror.yml  run_main.yml
Utils/: download.py  thotshub.py  thumb_maker.py  utils.py
json_files/: config_api.json  ids_api.json
thots/: thot_parse.py  thots.py
